--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,6 @@
     <div id="content">
       {{content}}
     </div>
-    <script type="text/javascript" src="/javascripts/min/main.js"></script>
+    <script type="text/javascript" src="/javascripts/main.js"></script>
   </body>
 </html>
