--- a/views/layout.html
+++ b/views/layout.html
@@ -7,7 +7,7 @@
     <title>React POC</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/css/min/styles.css">
     <style type="text/css">
     .pending {
       opacity: 0.3;
@@ -21,6 +21,6 @@
     <div id="content">
       {{content}}
     </div>
-    <script type="text/javascript" src="/javascripts/main.js"></script>
+    <script type="text/javascript" src="/javascripts/min/main.js"></script>
   </body>
 </html>
