--- a/views/head.html
+++ b/views/head.html
@@ -5,5 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>React POC</title>
-    <script type="text/javascript" src="/javascripts/main.js" defer></script>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
+    <link rel="stylesheet" type="text/css" href="/css/min/styles.css">
+    <script type="text/javascript" src="/javascripts/min/main.js"></script>
+    <style type="text/css">
+    .pending {
+      opacity: 0.3;
+    }
+    .highlight {
+      color: red;
+    }
+    </style>
   </head>
